--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,12 @@ language: go
 
 go:
  - "1.10.2"
+
+before_install:
+  - go get -t -v ./...
+
+script:
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
