--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - go get -t -v ./...
 
 script:
-  - go test -v ./... -coverprofile=coverage.txt -covermode=atomic
+  - go test -v ./... -coverprofile=coverage.txt -covermode=atomic -timeout 0
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
