--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: go
 
 go:
- -  master
+ - 1.11.x
 
-install: true
+env:
+ - GO111MODULE=on
 
 script:
   - go test -v ./... -coverprofile=coverage.txt -covermode=atomic
