--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
 
 script:
   - go test -v ./... -coverprofile=coverage.txt -covermode=atomic
+  - go test -v -tags='avx2' ./... -coverprofile=coverage.txt -covermode=atomic
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
