--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ env:
 matrix:
   include:
     - script:
-      - travis_retry go test -v ./... -coverprofile=coverage.txt -covermode=atomic
+      - go test -v ./... -coverprofile=coverage.txt -covermode=atomic
       after_success:
       - bash <(curl -s https://codecov.io/bash)
     - script:
-      - travis_retry go test -v -tags='avx2' ./... -coverprofile=coverage.txt -covermode=atomic
+      - go test -v -tags='avx2' ./... -coverprofile=coverage.txt -covermode=atomic
