--- a/example/server_config/config.toml
+++ b/example/server_config/config.toml
@@ -4,16 +4,20 @@ port = 8080
 
 [database]
 driver = "mysql"
-database = "gorse:password@/gorse"
+access = "gorse:password@/gorse"
 
 [recommend]
-model = "svd"
+base = "svd"
+cache_size = 100
+new_user = "item_pop"
+update_threshold = 1
+explore_prop = 0.1
+
+[params]
 optimizer = "bpr"
 n_factors = 10
 reg = 0.01
 lr = 0.05
 n_epochs = 100
-init_mean = 0
+init_mean = 0.0
 init_std = 0.001
-new_user = "item_pop"
-update_threshold = 1
