--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,5 +1,7 @@
 main:
   - title: "Document"
-    url: /year-archive/
-  - title: "Blog"
-    url: /docs/quick-start-guide/
+    url: https://github.com/zhenghaoz/gorse/wiki
+  - title: "Source"
+    url: https://github.com/zhenghaoz/gorse
+  - title: "Feedback"
+    url: "https://github.com/zhenghaoz/gorse/issues"
