Save recommends to database by stream
See RegisterReaderHandler:
https://godoc.org/github.com/go-sql-driver/mysql#RegisterReaderHandler

--- a/example/server_config/config.toml
+++ b/example/server_config/config.toml
@@ -7,7 +7,7 @@ driver = "mysql"
 access = "gorse:password@/gorse"
 
 [recommend]
-base = "svd"
+model = "svd"
 cache_size = 100
 new_user = "item_pop"
 update_threshold = 1
