--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,5 +1,7 @@
 main:
-  - title: "Document"
+  - title: "GoDoc"
+    url: https://godoc.org/github.com/zhenghaoz/gorse
+  - title: "Wiki"
     url: https://github.com/zhenghaoz/gorse/wiki
   - title: "Source"
     url: https://github.com/zhenghaoz/gorse
