--- a/example/server_config/config.toml
+++ b/example/server_config/config.toml
@@ -9,8 +9,9 @@ access = "gorse:password@/gorse"
 [recommend]
 model = "svd"
 cache_size = 100
-new_user = "item_pop"
-update_threshold = 1
+cold_user_model = "item_pop"
+update_threshold = 10
+check_period = 1
 explore_prop = 0.1
 
 [params]
