--- a/example/file_config/config.toml
+++ b/example/file_config/config.toml
@@ -14,6 +14,7 @@ cache_size = 100        # the number of cached recommendations
 update_threshold = 10   # update model when more than 10 ratings are added
 check_period = 1        # check for update every one minute
 similarity = "pearson"  # similarity metric for neighbors
+fit_jobs = 1            # concurrent jobs for fitting
 
 # This section declares hyperparameters for the recommendation model.
 [params]
