--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
   - mkdir -p ~/.gorse/download
   - wget https://cdn.sine-x.com/datasets/movielens/ml-100k.zip -P ~/.gorse/download
   - unzip ~/.gorse/download/ml-100k.zip -d ~/.gorse/dataset
-  - sudo apt-get -y install python3
+  - sudo apt-get -y install python3 python3-pip
   - pip3 install -r test/requirements.txt
 
 matrix:
