--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Setup python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+        python-version: '3.7' # Version range or exact version of a Python version to use, using SemVer's version range syntax
         architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
 
     - name: Check out code into the Go module directory
@@ -51,7 +51,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v ./... -coverprofile=coverage.txt -covermode=atomic
     
     - name: Regression Test - CV
       run: bash test/test_cross_validation.sh
@@ -61,3 +61,6 @@ jobs:
     
     - name: Regression Test - Server
       run: bash test/test_server.sh
+
+    - name: Upload 
+      run: bash <(curl -s https://codecov.io/bash)
