--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  build:
+  build_test:
     name: Build and Test
     runs-on: ubuntu-latest
     steps:
@@ -65,7 +65,7 @@ jobs:
     - name: Upload 
       run: bash <(curl -s https://codecov.io/bash)
 
-  build:
+  build_test_avx2:
     name: Build and Test (AVX2)
     runs-on: ubuntu-latest
     steps:
