--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -62,8 +62,10 @@ jobs:
     - name: Regression Test - Server
       run: bash test/test_server.sh
 
-    - name: Upload 
-      run: bash <(curl -s https://codecov.io/bash)
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        file: ./coverage.txt
 
   build_test_avx2:
     name: Build and Test (AVX2)
@@ -108,7 +110,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -timeout 20m -v -tags='avx2' ./... -coverprofile=coverage.txt -covermode=atomic
+      run: go test -timeout 20m -v -tags='avx2' ./...
     
     - name: Regression Test - CV
       run: bash test/test_cross_validation.sh
