--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -2,9 +2,13 @@ name: build
 
 on:
   push:
-    branches: [ master ]
+    branches:    
+      - master
+      - 'release-**'
   pull_request:
-    branches: [ master ]
+    branches:    
+      - master
+      - 'release-**'
 
 jobs:
 
