--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches:    
       - master
-      - 'releases-**'
+      - 'release-**'
   pull_request:
     branches:    
       - master
-      - 'releases-**'
+      - 'release-**'
 
 jobs:
 
