--- a/example/config/config_test.toml
+++ b/example/config/config_test.toml
@@ -5,17 +5,19 @@ port = 8080             # server port
 
 # This section declares setting for the database.
 [database]
-file = "~/.gorse/temp/database.db"  # database file
+path = "database"       # database path
 
 # This section declares settings for recommendation.
 [recommend]
-model = "svd"           # recommendation model
-similarity = "pearson"  # similarity metric for neighbors
-cache_size = 100        # the number of cached recommendations
-update_threshold = 10   # update model when more than 10 ratings are added
-check_period = 1        # check for update every one minute
-fit_jobs = 10           # concurrent jobs for fitting
-once = true             # recommend once
+model = "bpr"           # recommendation model for personal ranking
+top_n = 1024             # the number of cached recommendations/neighbor/latest/popular items
+update_threshold = 10   # update recommendation when more than 10 recommendations are cosumed
+train_threshold = 100   # retrain model when more than 100 ratings are added
+check_period = 7        # check for update every one minute
+similarity = "tag"  # similarity metric for neighbors
+fit_jobs = 8            # concurrent jobs for fitting
+update_jobs = 9        # concurrent jobs for predict
+collectors = ["pop", "latest", "neighbor"]
 
 # This section declares hyperparameters for the recommendation model.
 [params]
