--- a/test/config/config.toml
+++ b/test/config/config.toml
@@ -1,15 +1,34 @@
 # This section declares settings for the server.
-[server]
-host = "0.0.0.0"                # server host
-port = 8080                     # server port
-default_n = 10                  # defulat number of items on paging
+[common]
+cache_size = 1000
+retry_limit = 10
+retry_interval = 1
 
 # This section declares setting for the database.
 [database]
 path = "redis://127.0.0.1:6398" # database path
 
+# This section declares settings for the server.
+[server]
+host = "0.0.0.0"                # server host
+port = 8080                     # server port
+default_n = 10                  # defulat number of items on paging
+
+[worker]
+leader_addr = "127.0.0.1:9000"
+host = "127.0.0.1"
+gossip_port = 9001
+rpc_port = 9002
+predict_interval = 10
+gossip_interval = 2
+
 # This section declares hyperparameters for the recommendation model.
 [leader]
+model = "als"
+fit_interval = 60
+broadcast_interval = 3
+gossip_port = 9000
+host = "127.0.0.1"
 
 [leader.params]
 lr = 0.05                       # learning rate
@@ -21,3 +40,10 @@ use_bias = false                # use bias
 init_mean = 0.0                 # mean of gaussian initial parameter
 init_std = 0.001                # standard deviation of gaussian initial parameter
 weight = 1.0                    # alpha value, depend on context
+
+[leader.fit]
+n_jobs = 4
+verbose = 10
+n_candidates = 100
+top_k = 10
+num_test_users = 10000
