--- a/config/config.toml.template
+++ b/config/config.toml.template
@@ -8,31 +8,38 @@ data_store = "mysql://root@tcp(localhost:3306)/gitrec?parseTime=true"
 auto_insert_user = true
 # insert new items while inserting feedback
 auto_insert_item = false
+# feedback types for matching
 match_feedback_types = ["star"]
+# feedback types for ranking
 rank_feedback_types = ["star"]
 
 # This section declares setting for cached latest items.
 [latest]
-n_latest = 100          # number of cached latest items
+n_cache = 100           # number of cached latest items
 update_period = 10      # update period for latest items in minutes
 
 # This section declares setting for cached popular items.
 [popular]
-n_popular = 100         # number of cached popular items
+n_cache = 100           # number of cached popular items
 update_period = 30      # update period for popular items in minutes
 time_window = 360       # time window of cached popular items in days
 
 # This section declares setting for cached similar items.
 [similar]
-n_similar = 100         # number of cached similar items
+n_cache = 100           # number of cached similar items
 update_period = 120     # update period for similar items in minutes
 
 # This section declares setting for collabortive filatering model.
-[collabortive]
-n_collabortive = 100    # number of cached CF items
+[collaborative]
+n_cache = 100    # number of cached CF items
 cf_model = "als"        # collabortive filatering model
 fit_period = 60         # fit period for similar items in minutes
 predict_period = 60     # prediction period for similar items in minutes
+verbose = 10            # verbose period
+n_candidates = 100      # number of candidates for test
+top_k = 10              # evaluate top k recommendations
+n_test_users = 10000    # number of users in test set
+# hyperparameters
 lr = 0.05               # learning rate
 reg = 0.01              # regularization strength
 n_epochs = 100          # number of epochs
@@ -41,16 +48,14 @@ random_state = 21       # random state (seed)
 init_mean = 0.0         # mean of gaussian initial parameter
 init_std = 0.001        # standard deviation of gaussian initial parameter
 alpha = 1.0             # alpha value, depend on context
-fit_jobs = 4            # number of fit jobs
-verbose = 10            # verbose period
-n_candidates = 100      # number of candidates for test
-top_k = 10              # evaluate top k recommendations
-n_test_users = 10000    # number of users in test set
 
 # This section declares setting for rank model (factorization machines).
 [rank]
 fit_period = 60         # fit period for similar items in minutes
 task = "r"              # task type for ranking (r - regression, c - classification)
+split_ratio = 0.2       # split ratio of test set
+verbose = 10            # verbose period
+# hyperparameters
 lr = 0.05               # learning rate
 reg = 0.01              # regularization strength
 n_epochs = 100          # number of epochs
@@ -58,16 +63,14 @@ n_factors = 10          # number of factors
 random_state = 21       # random state (seed)
 init_mean = 0.0         # mean of gaussian initial parameter
 init_std = 0.001        # standard deviation of gaussian initial parameter
-fit_jobs = 4            # number of fit jobs
-verbose = 10            # verbose period
-split_ratio = 0.2
 
 # This section declares hyperparameters for the recommendation model.
 [master]
 port = 8086                 # master port
 host = "127.0.0.1"          # master host
-jobs = 4                    # working jobs
+n_jobs = 4                  # number of working jobs
 cluster_meta_timeout = 30   # cluster meta timeout (second)
 
 [server]
-default_n = 100
+default_n = 100             # default number of returned items
+api_key = ""                # secret key for RESTful APIs (SSL required)
