--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -25,7 +25,7 @@ jobs:
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
       mongo:
-        image: mongo
+        image: healthcheck/mongo
         ports:
           - 27017
         env:
