--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -70,9 +70,9 @@ jobs:
       run: go test -timeout 20m -v ./... -coverprofile=coverage.txt -covermode=atomic
       env:
         # MySQL
-        MYSQL_URI: mysql://root:password@tcp(mysql:${{ job.services.mysql.ports[3306] }})/
+        MYSQL_URI: mysql://root:password@tcp(localhost:${{ job.services.mysql.ports[3306] }})/
         # MongoDB
-        MONGO_URI: mongodb://root:password@mongo:${{ job.services.mongo.ports[27017] }}/
+        MONGO_URI: mongodb://root:password@localhost:${{ job.services.mongo.ports[27017] }}/
 
     - name: Upload 
       run: bash <(curl -s https://codecov.io/bash)
