upgrade go version

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -7,10 +7,10 @@ jobs:
     name: Build Release
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.13
+      - name: Set up Go 1.16.x
         uses: actions/setup-go@v1
         with:
-          go-version: 1.13
+          go-version: 1.16.x
         id: go
         
       - name: Pull source
