worker: decrease recommendation epochs of inactive users

--- a/config/config.toml.template
+++ b/config/config.toml.template
@@ -19,7 +19,7 @@ http_port = 8088            # HTTP API port
 http_host = "127.0.0.1"     # HTTP API host
 search_jobs = 1             # number of jobs for model search
 fit_jobs = 1                # number of jobs for model fitting
-meta_timeout = 30           # cluster meta timeout (second)
+meta_timeout = 10           # cluster meta timeout (second)
 
 # This section declares settings for the server node.
 [server]
@@ -31,3 +31,4 @@ api_key = ""                # secret key for RESTful APIs (SSL required)
 popular_window = 365        # timw window of popular items (days)
 fit_period = 10             # time period for model fitting (minutes)
 search_period = 60          # time period for model searching (minutes)
+max_recommend_period = 1    # time period for inactive user recommendation (days)
