--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go 1.16.x
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v2
         with:
           go-version: 1.16.x
         id: go
@@ -14,11 +14,11 @@ jobs:
       - name: Pull source
         uses: actions/checkout@v1
         
+      - name: Install gox
+        run: go get -v github.com/mitchellh/gox
+        
       - name: Build release
-        run: |
-          export PATH=$PATH:$(go env GOPATH)/bin
-          go get -v github.com/mitchellh/gox
-          gox -os='darwin windows linux' -arch='amd64' ./...
+        run: gox -osarch='darwin/arm64 darwin/amd64 windows/amd64 linux/amd64' ./...
 
       - name: Install zip
         uses: montudor/action-zip@v0.1.1
@@ -28,12 +28,13 @@ jobs:
           zip gorse_linux_amd64.zip gorse-*_linux_amd64
           zip gorse_windows_amd64.zip gorse-*_windows_amd64.exe
           zip gorse_darwin_amd64.zip gorse-*_darwin_amd64
+          zip gorse_darwin_arm64.zip gorse-*_darwin_arm64
           
       - name: Upload release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: gorse_*_amd64.zip
+          file: gorse_*_*.zip
           tag: ${{ github.ref }}
           overwrite: true
           file_glob: true
