--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -1,8 +1,10 @@
-name: Build Release
+name: build release
+
 on: release
+
 jobs:
-  build-release:
-    name: Build Release
+  build-binaries:
+    name: Build Binaries
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go 1.16.x
@@ -38,3 +40,28 @@ jobs:
           tag: ${{ github.ref }}
           overwrite: true
           file_glob: true
+
+  build-docker-images:
+    name: "Build Docker Images"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: docker/gorse-master
+          push: true
+          tags: zhenghaoz/gorse-master:${{ github.ref }}
+          
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
+  
