--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -45,6 +45,9 @@ jobs:
     name: "Build Docker Images"
     runs-on: ubuntu-latest
     steps:
+      - name: Pull source
+        uses: actions/checkout@v1
+        
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
         
