--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -1,8 +1,10 @@
-name: Build Release
+name: build release
+
 on: release
+
 jobs:
-  build-release:
-    name: Build Release
+  build-binaries:
+    name: Build Binaries
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go 1.16.x
@@ -38,3 +40,53 @@ jobs:
           tag: ${{ github.ref }}
           overwrite: true
           file_glob: true
+
+  build-docker-images:
+    name: "Build Docker Images"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Pull source
+        uses: actions/checkout@v1
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
+      - uses: olegtarasov/get-tag@v2.1
+        id: tag_name
+          
+      - name: Build master image
+        id: docker_build_master
+        uses: docker/build-push-action@v2
+        with:
+          context: docker/gorse-master
+          push: true
+          tags: zhenghaoz/gorse-master:${{ steps.tag_name.outputs.tag }}
+          
+      - name: Build server image
+        id: docker_build_server
+        uses: docker/build-push-action@v2
+        with:
+          context: docker/gorse-server
+          push: true
+          tags: zhenghaoz/gorse-server:${{ steps.tag_name.outputs.tag }}
+          
+      - name: Build worker image
+        id: docker_build_worker
+        uses: docker/build-push-action@v2
+        with:
+          context: docker/gorse-worker
+          push: true
+          tags: zhenghaoz/gorse-worker:${{ steps.tag_name.outputs.tag }}
+          
+      - name: Image digest
+        run: |
+          echo ${{ steps.docker_build_master.outputs.digest }}
+          echo ${{ steps.docker_build_server.outputs.digest }}
+          echo ${{ steps.docker_build_worker.outputs.digest }}
+  
