--- a/config/config.toml.template
+++ b/config/config.toml.template
@@ -17,22 +17,25 @@ item_ttl = 0
 
 # This section declares settings for the master node.
 [master]
-port = 8086                 # master port
-host = "127.0.0.1"          # master host
-http_port = 8088            # HTTP API port
-http_host = "127.0.0.1"     # HTTP API host
-search_jobs = 1             # number of jobs for model search
-fit_jobs = 1                # number of jobs for model fitting
-meta_timeout = 10           # cluster meta timeout (second)
+port = 8086                     # master port
+host = "127.0.0.1"              # master host
+http_port = 8088                # HTTP API port
+http_host = "127.0.0.1"         # HTTP API host
+search_jobs = 1                 # number of jobs for model search
+fit_jobs = 1                    # number of jobs for model fitting
+meta_timeout = 10               # cluster meta timeout (second)
 
 # This section declares settings for the server node.
 [server]
-default_n = 10              # default number of returned items
-api_key = ""                # secret key for RESTful APIs (SSL required)
+default_n = 10                  # default number of returned items
+api_key = ""                    # secret key for RESTful APIs (SSL required)
 
 # This section declares settings for recommendation.
 [recommend]
-popular_window = 365        # timw window of popular items (days)
-fit_period = 10             # time period for model fitting (minutes)
-search_period = 60          # time period for model searching (minutes)
-max_recommend_period = 1    # time period for inactive user recommendation (days)
+popular_window = 365            # timw window of popular items (days)
+fit_period = 10                 # time period for model fitting (minutes)
+search_period = 60              # time period for model searching (minutes)
+max_recommend_period = 1        # time period for inactive user recommendation (days)
+search_epoch = 100              # number of epochs for model searching
+search_trials = 10              # number of trials for model searching
+fallback_recommend = "latest"   # fallback method for recommendation (popular/latest)
